Fix search plot icon overlapping with text

--- a/app/search/styles.css
+++ b/app/search/styles.css
@@ -24,6 +24,7 @@ main.search {
     height: 2em;
     font-size: 1.3em;
     padding: 0.5em;
+    padding-right: 2em;
     border-radius: 0.5em;
     margin-bottom: 1em;
     border: none;
